# my_aoc2024

./: Cargo.toml  LICENSE  README.md  generate_days.sh
benches/: benchmark.rs
inputs/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt
src/: lib.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
